--- a/templates/template.html
+++ b/templates/template.html
@@ -3,37 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Lake Sammamish Water Temperature</title>
+    <link rel="stylesheet" href="style.css">  <!-- Link to external CSS file -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
-    <script src="chart.js"></script> <!-- External JS file -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        .chart-container {
-            width: 100vw;
-            height: 80vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 10px;
-        }
-        @media screen and (max-width: 768px) {
-            h1 {
-                font-size: 1.2rem;
-            }
-            .chart-container {
-                height: 500px;
-            }
-            canvas {
-                width: 100% !important;
-                height: 100% !important;
-            }
-        }
-    </style>
 </head>
 <body>
     <h1>Lake Sammamish Water Temperature</h1>
