--- a/templates/template.html
+++ b/templates/template.html
@@ -16,5 +16,6 @@
         const dataCurrent = {{DATA_CURRENT}};
         const dataPast = {{DATA_PAST}};
     </script>
+    <script src="chart.js"></script>
 </body>
 </html>
