--- a/docs/style.css
+++ b/docs/style.css
@@ -17,6 +17,14 @@ h1 {
     color: #333; /* Dark gray for readability */
 }
 
+h2 {
+    font-size: 1.5rem; /* Adjust as needed */
+    font-weight: bold;
+    text-align: center;
+    margin-top: 10px;
+    color: #333; /* Dark gray for readability */
+}
+
 /* Make sure the chart container fits within the viewport */
 .chart-container {
     width: 100vw; /* Full viewport width */
