--- a/docs/style.css
+++ b/docs/style.css
@@ -25,6 +25,13 @@ h2 {
     color: #333; /* Dark gray for readability */
 }
 
+p {
+    font-size: 1.2rem; /* Adjust as needed */
+    text-align: center;
+    margin-top: 10px;
+    color: #333; /* Dark gray for readability */
+}
+
 /* Make sure the chart container fits within the viewport */
 .chart-container {
     width: 100vw; /* Full viewport width */
