--- a/docs/style.css
+++ b/docs/style.css
@@ -43,8 +43,8 @@ p {
 
 /* Make sure the chart container fits within the viewport */
 .chart-container {
-    width: 100vw; /* Full viewport width */
-    max-width: 100%; /* Prevents it from being too large on big screens */
+    width: 100%; /* Full viewport width */
+    max-width: 1000px; /* Prevents it from being too large on big screens */
     height: 82vh; /* Full viewport height */
     margin: 2rem auto; /* Centers it horizontally */
     padding: 1rem;
