--- a/docs/style.css
+++ b/docs/style.css
@@ -25,6 +25,15 @@ h1 {
     margin: 1.5rem 0 0.5rem;
 }
 
+h1.temp {
+    font-size: 2.5rem; /* Adjust as needed */
+    font-weight: 1200;
+    text-align: center;
+    margin-top: -10px;
+    color: #222; /* Dark gray for readability */
+    margin: 1.5rem 0 0.5rem;
+}
+
 h2 {
     font-size: 1.5rem; /* Adjust as needed */
     font-weight: 500;
